--- a/BarajFrontend/index.html
+++ b/BarajFrontend/index.html
@@ -250,7 +250,7 @@
                 <div class="col-lg-7 mb-40">
 
                     <!-- CHART2 -->
-                    <div id="chart2_div"></div>
+                    <div id="waterPerCapita"></div>
 
                 </div>
                 <div class="col-lg-4 align-self-center offset-lg-1 mb-40">
