--- a/BarajFrontend/index.html
+++ b/BarajFrontend/index.html
@@ -874,7 +874,9 @@
     <!-- Template custome JavaScript -->
     <script src="assets/js/scripts.min.js"></script>
 
-    <script type="text/javascript" src="jscript.js"></script>
+    <script type="text/javascript" src="chart1.js"></script>
+    <script type="text/javascript" src="chart2.js"></script>
+
 
 </body>
 
