--- a/BarajFrontend/index.html
+++ b/BarajFrontend/index.html
@@ -655,9 +655,9 @@
     <!-- Template custome JavaScript -->
     <script src="assets/js/scripts.min.js"></script>
 
-    <!-- <script type="text/javascript" src="chart1.js"></script>
+     <script type="text/javascript" src="chart1.js"></script>
     <script type="text/javascript" src="chart2.js"></script> 
-    <script type="text/javascript" src="chart3.js"></script> -->
+    <script type="text/javascript" src="chart3.js"></script> 
     <script type="text/javascript" src="chart4.js"></script>
 
 
