Added social links

--- a/BarajBackend/BarajFrontend/index.html
+++ b/BarajBackend/BarajFrontend/index.html
@@ -491,10 +491,10 @@ birlikte yen.</blockquote>
                     <div class="footer__widget">
                         <h4 class="footer__widget-title">Takip Edin</h4>
                         <ul class="footer__widget-network">
-                            <li><a href="#" class="footer__widget-network-link"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#" class="footer__widget-network-link"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#" class="footer__widget-network-link"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="#" class="footer__widget-network-link"><i class="fa fa-youtube-play"></i></a>
+                            <li><a href="https://www.facebook.com/istanbulbuyuksehirbld/" class="footer__widget-network-link"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://twitter.com/istanbulbld" class="footer__widget-network-link"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://tr.linkedin.com/company/istanbul-buyuksehir-belediyesi" class="footer__widget-network-link"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://www.youtube.com/channel/UCdHLGlFVLXSF8avtflkMrHA" class="footer__widget-network-link"><i class="fa fa-youtube-play"></i></a>
                             </li>
                         </ul>
                     </div>
